added code for bred scrumb , extra params ,sort , and optimization